SERVER-30084 Validate that at least one shard is present when running collectionless aggregations on mongos